--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -70,8 +70,8 @@
                       <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{ value_in_currency(sale.remaining_balance)}" %></td>
                       <td class="text-right">
                         <%=link_to raw("<i class= 'fa fa-print'></i>"),invoice_sale_path(sale), class: "btn btn-dark"%>
-                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_sale_path(sale), class: "btn btn-info"%>
-                        <%=link_to raw("<i class= 'fa fa-times'></i>"),sale, class: "btn btn-danger",:method => :delete, data: {:confirm => "Are you sure?"}%>
+                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_sale_path(sale), class: "btn btn-dark"%>
+                        <%=link_to raw("<i class= 'fa fa-times'></i>"),sale, class: "btn btn-dark",:method => :delete, data: {:confirm => "Are you sure?"}%>
                       </td>
                     </tr>
                 <% end %>
