--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,71 +1,93 @@
+<section id="content">
+  <%=render partial: "template/bread_crums"%>
+  <section class="vbox">
+    <section class="scrollable padder">
+      <div class="col-sm-12">
+        <section class="panel panel-default">
+          <header class="panel-heading" style="background:#FFF;">
+            <h3 style="color:#717171;">Customer Details</h3>
+          </header>
+          <div class="panel-body">
+<%= form_for @customer , html: {class: "bs-example form-horizontal"} do |f|  %>
 
-  <%= form_for(@customer) do |f| %>
-
-
-
-      <div class="row">
-        <div class="col-sm-6">
-          <label>First Name</label>
-          <div class="form-group">
-            <%= f.text_field :first_name, :class => "form-control input-lg", :placeholder => "First Name" %>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <label>Last Name</label>
-          <div class="form-group">
-            <%= f.text_field :last_name, :class => "form-control input-lg", :placeholder => "Last Name" %>
-          </div>
-        </div>
+    <div class="form-group">
+      <%= f.label :first_name , class: 'col-lg-2 control-label' , required: true %>
+      <div class="col-lg-10">
+        <%= f.text_field :first_name, :class=>"form-control" , required: true %>                    <!--<span class="help-block m-b-none">Website URL.</span>-->
       </div>
+    </div>
 
-        <div class="row">
-          <div class="col-sm-6">
-            <label>Phone Number</label>
-            <div class="form-group">
-                <%= f.text_field :phone_number, :class => "form-control input-lg", :placeholder => "Phone Number" %>
-            </div>
-            </div>
-          <div class="col-sm-6">
-            <label>Email Address</label>
-            <div class="form-group">
-                <%= f.text_field :email_address, :class => "form-control input-lg", :id =>  "exampleInputEmail1", :placeholder => "Email Address" %>
-            </div>
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <label>Address</label>
-            <div class="form-group">
-                <%= f.text_field :address, :class => "form-control input-lg", :placeholder => "Address" %>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <label>City</label>
-            <div class="form-group">
-                <%= f.text_field :city, :class => "form-control input-lg", :placeholder => "City" %>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <label>State</label>
-            <div class="form-group">
-                <%= f.text_field :state, :class => "form-control input-lg", :placeholder => "State" %>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <label>Zip</label>
-            <div class="form-group">
-                <%= f.text_field :zip, :class => "form-control input-lg", :placeholder => "Zip" %>
-            </div>
-          </div>
-        </div>
-
-      <div class="line line-dashed line-lg pull-in"></div>
-      <div class="form-group">
-        <div class="col-lg-offset-2 col-lg-10">
-          <%= f.submit :class=>"btn btn-info btn-md" %>
-          <%= button_tag "Cancel", :type => 'reset',:class=>"btn btn-md" %>
-        </div>
+    <div class="form-group">
+      <label class="col-lg-2 control-label">Last Name</label>
+      <div class="col-lg-10">
+        <%= f.text_field :last_name, class: "form-control" %>
       </div>
-      <% end %>
+    </div>
+    <div class="form-group">
+      <label class="col-lg-2 control-label">Email</label>
+      <div class="col-lg-10">
+        <%= f.text_field :email_address, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-lg-2 control-label">Phone</label>
+      <div class="col-lg-10">
+        <%= f.text_field :phone_number, :class=>"form-control" %>
+      </div>
+    </div>
+    <legend>Address</legend>
+    <%= f.fields_for :address do |a|%>
+        <div class="form-group">
+          <label class="col-lg-2 control-label">Address</label>
+          <div class="col-lg-10">
+            <%= a.text_field :address_1, :class=>"form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-2 control-label">City</label>
+          <div class="col-lg-10">
+            <%= a.text_field :city, class: "form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-2 control-label">State</label>
+          <div class="col-lg-10">
+            <%= a.text_field :state, :class=>"form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-2 control-label">Zip Code</label>
+          <div class="col-lg-10">
+            <%= a.text_field :zip, :class=>"form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-2 control-label">Country</label>
+          <div class="col-lg-10">
+            <%= a.country_select(:country ,  {prompt: 'Select Country'} ,{ class: "form-control input-lg select2-container select2-container-active" , required: true } ) %>
+          </div>
+        </div>
+    <% end%>
+
+    <div class="line line-dashed line-lg pull-in"></div>
+    <div class="form-group">
+      <div class="col-lg-offset-2 col-lg-10">
+        <%= f.submit 'Submit' , class:"btn btn-info" %>
+        <%= button_tag "Cancel", type: 'reset',:class=>"btn" %>
+      </div>
+    </div>
+<% end %>
+          </div>
+        </section>
+      </div>
+    </section>
+  </section>
+</section>
+<% content_for :scripts do %>
+    <script>
+        $(document).ready(function(){
+            $('<%= params[:action] == 'new' ? "#new_customer" : "#edit_customer_#{params[:id]}"%>').validate();
+        });
+    </script>
+<%end%>
