--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -70,8 +70,8 @@
                       <td><%= item.amount_sold %></td>
                       <td><%= number_to_currency(item.price , unit: current_company.currency)%></td>
                       <td class="text-right">
-                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_item_path(item), class: "btn btn-info"%>
-                        <%=link_to raw("<i class= 'fa fa-times'></i>"),item, class: "btn btn-danger",:method => :delete, data: {:confirm => "Are you sure you want to delete this item?"}%>
+                        <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_item_path(item), class: "btn btn-dark"%>
+                        <%=link_to raw("<i class= 'fa fa-times'></i>"),item, class: "btn btn-dark",:method => :delete, data: {:confirm => "Are you sure you want to delete this item?"}%>
                       </td>
                     </tr>
                 <% end %>
