--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -11,7 +11,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
       <meta name="robots" content="noindex">
       <meta name="googlebot" content="noindex">
-      <title><%= SITE_NAME %> | Tending Your Business To Greatness </title>
+      <title><%= SITE_NAME %> | Managing Your Business To Greatness </title>
      <!--  <meta name="description" content="<%#= @store.store_description.blank? ? "PushVendor Point of Sale" : @store.store_description %>"> -->
       <meta name="viewport" content ="width=device-width; initial-scale=1.0;">
 
