favicon icon & add finances to left side bar

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -65,7 +65,7 @@
         <div class="form-group">
           <label class="col-lg-2 control-label">Country</label>
           <div class="col-lg-10">
-            <%= a.country_select(:country ,  {prompt: 'Select Country'} ,{ class: "form-control input-lg select2-container select2-container-active" , required: true } ) %>
+            <%= a.country_select(:country ,  {prompt: 'Select Country'} ,{ class: "form-control select2-container select2-container-active" , required: true } ) %>
           </div>
         </div>
     <% end%>
