--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -48,6 +48,7 @@
                   <!--<th width="20"><input type="checkbox"></th>-->
                   <th>Last Name</th>
                   <th>First Name</th>
+                  <th>Email</th>
                   <th><span class="pull-right">Actions</span></th>
                 </tr>
                 </thead>
@@ -57,6 +58,7 @@
                       <!--<td><input type="checkbox" name="user[]" value="<%#= user.id %>"></td>-->
                       <td><%= customer.last_name %></td>
                       <td><%= customer.first_name %></td>
+                      <td><%= customer.email %></td>
                       <td class="text-right">
                         <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_customer_path(customer), class: "btn btn-dark"%>
                         <%=link_to raw("<i class= 'fa fa-times'></i>"),customer, class: "btn btn-dark",:method => :delete, data: {:confirm => "Are you sure?"}%>
