--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta name="robots" content="noindex">
       <meta name="googlebot" content="noindex">
+      <%= favicon_link_tag 'favicon.ico'%>
       <title><%= current_user.company_name %></title>
       <meta name="description" content="<%= current_user.company_description %>">
       <meta name="viewport" content ="width=device-width; initial-scale=1.0;">
