--- a/app/views/template/_landing_header.html.erb
+++ b/app/views/template/_landing_header.html.erb
@@ -3,7 +3,7 @@
 <header id="header" class="navbar navbar-fixed-top bg-white box-shadow b-b b-light"  data-spy="affix" data-offset-top="1">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand"><img src="<%=asset_path(current_site.logo || 'logo-white.png')%>" alt= "<%= current_site.name%>" class="m-r-sm" style="min-height: 50px;"><span class="text-muted"></span></a>
+      <a href="#" class="navbar-brand"><img src="<%=asset_path('logo-white.png')%>" alt= "<%= current_site.name%>" class="m-r-sm" style="min-height: 50px;"><span class="text-muted"></span></a>
       <button class="btn btn-link visible-xs" type="button" data-toggle="collapse" data-target=".navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
