--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,4 @@
-<section id="content ">
-  <section class="scrollable padder">
-    <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
-      <li><a href="<%= users_path %>"><i class="fa fa-user"></i> Employees</a></li>
-      <li class="active">New</li>
-    </ul>
-  </section>
+
   <section class="vbox">
     <section class="scrollable padder m-t-lg">
       <div class="col-sm-12">
@@ -22,8 +16,10 @@
     </section>
   </section>
   <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
-</section>
 
-<script>
-$('#new_user').validate();
-</script>
+  <% content_for :scripts do %>
+      <script type="text/javascript">
+          $('#new_user').validate();
+          $(".location-multiple").select2();
+      </script>
+  <% end %>
