--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,70 +1,85 @@
 
-<section id="content m-t-lg">
   <section class="vbox">
-    <section class="scrollable padder m-t-lg">
+
+    <section class="scrollable padder">
       <div class="col-sm-12">
         <section class="panel panel-default" >
           <header class="panel-heading" style="background:#FFF;">
-            <h3 style="color:#717171;"><%= params[:action] == "new" ? "Create" : "" %>Item Category</h3>
+            <h3 style="color:#717171;">Item Category</h3>
           </header>
           <div class="panel-body">
+            <%= form_for @item , html: {class: "bs-example form-horizontal"} do |f|  %>
+                <!--<p class="text-info">All <em class="text-danger">*</em> are required.</p>-->
 
-            <%= form_for @item do |f|  %>
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">Name of Item<em class="text-danger">*</em></label>
+                  <div class="col-lg-10">
+                    <%= f.text_field :name, class: "form-control", placeholder: "Item Name" , required: true%>
+                  </div>
+                </div>
 
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Category</label>
-                      <%= f.collection_select :item_category_id, current_company.item_categories , :id, :name, {prompt: "Select a category"}, {class: "form-control"}  %>
-                    </div>
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">Item Category<em class="text-danger">*</em></label>
+                  <div class="col-lg-10">
+                    <%= f.collection_select :item_category_id, current_company.item_categories , :id, :name, {prompt: "Select a category"}, {class: "form-control" , required: true}  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">
+                    SKU<em class="text-danger">*</em>
+                  </label>
+                  <div class="col-lg-10">
+                    <%= f.text_field :sku, class: "form-control", placeholder: "Item Sku" , required: true%>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-sm-2 control-label">Item Photo</label>
+                  <div class="col-sm-10">
+                    <%= f.file_field :photo, class: "btn btn-default",data: { fp_crop_ratio: "*/4", fp_button_class: 'btn btn-default',fp_button_text: 'Upload'}%>
+                    <%#= f.file_field :logo, :class=>"filestyle",:style=>"display:none" ,"data-icon" => "false",  "data-classButton" => "btn btn-default",  "data-classInput" => "form-control inline input-s" %>
+                    <span class="help-block m-b-none">Image size should be less than 500KB.</span>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">Description</label>
+                  <div class="col-lg-10">
+                    <%= f.text_area :description, rows: "3",placeholder: "Description About Item", class: "form-control" %>
                   </div>
                 </div>
 
 
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>SKU</label>
-                      <%= f.text_field :sku, :class => "form-control", :placeholder => "Item Sku" %>
-                    </div>
+                <legend>Prices </legend>
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">Price<em class="text-danger">*</em></label>
+                  <div class="col-lg-10 input-group">
+                    <span class="input-group-addon"><%= current_company.currency %></span>
+                    <%= f.number_field :price, :class => "form-control", :placeholder => "Item Price" %>                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">Stock Amount<em class="text-danger">*</em></label>
+                  <div class="col-lg-10 input-group">
+                    <span class="input-group-addon"><%= current_company.currency %></span>
+                    <%= f.number_field :stock_amount, :class => "form-control", :placeholder => "Amount in Stock" %>
                   </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Name of Item</label>
-                      <%= f.text_field :name, :class => "form-control", :placeholder => "Item Name" %>
-                    </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-2 control-label">Cost Price<em class="text-danger">*</em></label>
+                  <div class="col-lg-10 input-group">
+                    <span class="input-group-addon"><%= current_company.currency %></span>
+                    <%= f.number_field :cost_price, :class => "form-control", :placeholder => "Cost of Item" %>
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Price</label>
-                      <%= f.text_field :price, :class => "form-control", :placeholder => "Item Price" %>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Stock Amount</label>
-                      <%= f.text_field :stock_amount, :class => "form-control", :placeholder => "Amount in Stock" %>
-                    </div>
-                  </div>
-                </div>
+                <!--<div class="form-group">-->
+                  <!--<label class="col-lg-2 control-label">Low Stock Alert</label>-->
+                  <!--<div class="col-lg-10">-->
+                    <!--<%#= f.number_field :low_stock_alert, value: 0 ,class:"form-control" %>-->
+                    <!--<span class="help-block m-b-none">Stock Alerts For Products</span>-->
+                  <!--</div>-->
+                <!--</div>-->
 
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Cost Price</label>
-                      <%= f.text_field :cost_price, :class => "form-control", :placeholder => "Cost of Item" %>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Description</label>
-                      <%= f.text_area :description, :class => "form-control", :placeholder => "Item Description" %>
-                    </div>
-                  </div>
-                </div>
+
                 <div class="line line-dashed line-lg pull-in"></div>
                 <div class="form-group">
                   <div class="col-lg-offset-2 col-lg-10">
@@ -77,7 +92,6 @@
         </section>
       </div>
     </section>
-  </section>
   <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
 </section>
 
