--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -12,7 +12,7 @@
       <meta name="robots" content="noindex">
       <meta name="googlebot" content="noindex">
       <%= favicon_link_tag 'favicon.ico'%>
-      <title><%= current_site.name %> | Managing Your Business To Greatness </title>
+      <title> ManageHub360 | Managing Your Business To Greatness </title>
      <!--  <meta name="description" content="<%#= @store.store_description.blank? ? "PushVendor Point of Sale" : @store.store_description %>"> -->
       <meta name="viewport" content ="width=device-width; initial-scale=1.0;">
 
