--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<section id="content">
+<!--<section id="content">-->
   <section class="hbox stretch">
     <aside>
 
@@ -47,6 +47,7 @@
                 <tr>
                   <!--<th width="20"><input type="checkbox"></th>-->
                   <th>Name</th>
+                  <th>Work Location</th>
                   <th>Email</th>
                   <th>Role</th>
                   <th>Salay</th>
@@ -59,6 +60,7 @@
                     <tr>
                       <!--<td><input type="checkbox" name="user[]" value="<%#= user.id %>"></td>-->
                       <td><%= user.username %></td>
+                      <td><%= user.locations.map(&:name).join(', ') %></td>
                       <td><%= user.email %></td>
                       <td><%= user.role.name %></td>
                       <td><%= number_to_currency(user.salary , unit: current_company.currency)%></td>
@@ -94,4 +96,4 @@
     </aside>
   </section>
   <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
-</section>
+<!--</section>-->
