--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,213 +1,77 @@
-<section id="content ">
+<section class="vbox">
   <section class="scrollable padder">
-    <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
-      <li><a href="<%= expenses_path %>"><i class="fa fa-user"></i> Expenses</a></li>
-      <li class="active">New</li>
-    </ul>
+    <div class="col-sm-12">
+      <section class="panel panel-default">
+        <header class="panel-heading" style="background:#FFF;">
+          <h3 style="color:#717171;"><%= params[:action]%> Expense</h3>
+        </header>
+        <div class="panel-body">
+          <%= form_for @expense , multipart: true , html: {class: "bs-example form-horizontal"} do |f|  %>
+
+              <div class="form-group">
+                <label class="col-sm-2 control-label">Start Date</label>
+                <div class="col-sm-2">
+                  <%= f.text_field :start_date, :class=>"input-sm input-s datepicker-input form-control" , size: "16" , value:  Date.today.to_s , 'data-date-format': "yyyy-mm-dd"  %>
+                </div>
+                <label class="col-sm-2 control-label">End Date</label>
+                <div class="col-sm-4">
+                  <%= f.text_field :end_date, :class=>"input-sm input-s datepicker-input form-control" , size: "16" , value:  Date.today.to_s , 'data-date-format': "yyyy-mm-dd"  %>                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-lg-2 control-label">Title<em class="text-danger">*</em></label>
+                <div class="col-lg-10">
+                  <%= f.text_field :expense_type, :class=>"form-control" %>                    <!--<span class="help-block m-b-none">Website URL.</span>-->
+                </div>
+              </div>
+
+
+
+              <div class="form-group">
+                <label class="col-sm-2 control-label">Receipts</label>
+                <div class="col-sm-10">
+                  <%= f.file_field :attachment, class: "btn btn-default",data: { fp_crop_ratio: "*/4", fp_button_class: 'btn btn-default',fp_button_text: 'Upload'}%>
+
+                  <%#= f.file_field :logo, :class=>"filestyle",:style=>"display:none" ,"data-icon" => "false",  "data-classButton" => "btn btn-default",  "data-classInput" => "form-control inline input-s" %>
+                  <span class="help-block m-b-none">Upload file not more than 500KB.</span>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-lg-2 control-label">Expense<em class="text-danger">*</em></label>
+                <div class="col-lg-10">
+                  <div class="input-group">
+                  <span class="input-group-addon"><%= current_company.currency %></span>
+                  <%= f.number_field :amount, :class => "form-control", :placeholder => "Expense" %>
+                </div></div>
+              </div>
+
+              <!--<div class="form-group">-->
+              <!--<label class="col-lg-2 control-label">Tag Line</label>-->
+              <!--<div class="col-lg-10">-->
+              <!--<%#= f.text_field :tag_line, :class=>"form-control" %>-->
+              <!--<span class="help-block m-b-none">Company tag-line or slogon</span>-->
+              <!--</div>-->
+              <!--</div>-->
+              <div class="form-group">
+                <label class="col-lg-2 control-label">Purpose</label>
+                <div class="col-lg-10">
+                  <%= f.text_area :purpose, rows: "4",placeholder: "Expense Description", class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="line line-dashed line-lg pull-in"></div>
+              <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-10">
+                  <%= f.submit  :class => "btn btn-info" %>
+                  <%= button_tag "Cancel", type: 'reset',:class=>"btn" %>
+                </div>
+              </div>
+          <% end %>
+        </div>
+      </section>
+    </div>
   </section>
-  <section class="vbox">
-    <section class="scrollable padder m-t-lg">
-      <div class="col-sm-12">
-        <section class="panel panel-default" >
-          <header class="panel-heading" style="background:#FFF;">
-            <h3 style="color:#717171;"><%= head %></h3>
-          </header>
-          <div class="panel-body">
-            <%= form_for @expense , multipart: true do |f| %>
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <%= f.label :attachment %>
-                      <%= f.file_field :attachment, :class => "form-control input-lg "%>
-                    </div>
-                  </div>
-
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Start Date<span class="text-danger"> *</span></label>
-                      <input class="input-sm input-s datepicker-input form-control" size="16" type="text" value="12-02-2013" data-date-format="dd-mm-yyyy" >
-                      <%= f.text_field :start_date , :class=>"form-control input-lg datepicker datepicker-input-expense" ,placeholder:"When did you start working here" %>
-
-                      <%#= f.date_select :start_date, required: true , :class => "form-control input-lg " %>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <%= f.label :purpose %>
-                      <%= f.text_area :purpose, :class => "form-control input-lg "%>
-                    </div>
-                  </div>
-
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>End Date<span class="text-danger"> *</span></label>
-                      <%= f.date_select :end_date, required: true , :class => "form-control input-lg " %>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <%= f.label :paid_time %>
-                      <%= f.datetime_select :paid_time ,:class => "form-control combodate", html: {'data-format': "DD-MM-YYYY HH:mm" , 'data-template': "D  MMM  YYYY  -  HH : mm"} , style: "display: none;"%>
-                      <div class="col-sm-10">
-                        <input type="text" class="combodate form-control" data-format="DD-MM-YYYY HH:mm" data-template="D  MMM  YYYY  -  HH : mm" name="datetime" value="21-12-2012 20:30" style="display: none;"><span class="combodate"><select class="day form-control" style="width: auto;"><option value=""></option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                        <option value="13">13</option>
-                        <option value="14">14</option>
-                        <option value="15">15</option>
-                        <option value="16">16</option>
-                        <option value="17">17</option>
-                        <option value="18">18</option>
-                        <option value="19">19</option>
-                        <option value="20">20</option>
-                        <option value="21">21</option>
-                        <option value="22">22</option>
-                        <option value="23">23</option>
-                        <option value="24">24</option>
-                        <option value="25">25</option>
-                        <option value="26">26</option>
-                        <option value="27">27</option>
-                        <option value="28">28</option>
-                        <option value="29">29</option>
-                        <option value="30">30</option>
-                        <option value="31">31</option></select>&nbsp;&nbsp;<select class="month form-control" style="width: auto;"><option value=""></option>
-                        <option value="0">Jan</option>
-                        <option value="1">Feb</option>
-                        <option value="2">Mar</option>
-                        <option value="3">Apr</option>
-                        <option value="4">May</option>
-                        <option value="5">Jun</option>
-                        <option value="6">Jul</option>
-                        <option value="7">Aug</option>
-                        <option value="8">Sep</option>
-                        <option value="9">Oct</option>
-                        <option value="10">Nov</option>
-                        <option value="11">Dec</option></select>&nbsp;&nbsp;<select class="year form-control" style="width: auto;"><option value=""></option>
-                        <option value="2015">2015</option>
-                        <option value="2014">2014</option>
-                        <option value="2013">2013</option>
-                        <option value="2012">2012</option>
-                        <option value="2011">2011</option>
-                        <option value="2010">2010</option>
-                        <option value="2009">2009</option>
-                        <option value="2008">2008</option>
-                        <option value="2007">2007</option>
-                        <option value="2006">2006</option>
-                        <option value="2005">2005</option>
-                        <option value="2004">2004</option>
-                        <option value="2003">2003</option>
-                        <option value="2002">2002</option>
-                        <option value="2001">2001</option>
-                        <option value="2000">2000</option>
-                        <option value="1999">1999</option>
-                        <option value="1998">1998</option>
-                        <option value="1997">1997</option>
-                        <option value="1996">1996</option>
-                        <option value="1995">1995</option>
-                        <option value="1994">1994</option>
-                        <option value="1993">1993</option>
-                        <option value="1992">1992</option>
-                        <option value="1991">1991</option>
-                        <option value="1990">1990</option>
-                        <option value="1989">1989</option>
-                        <option value="1988">1988</option>
-                        <option value="1987">1987</option>
-                        <option value="1986">1986</option>
-                        <option value="1985">1985</option>
-                        <option value="1984">1984</option>
-                        <option value="1983">1983</option>
-                        <option value="1982">1982</option>
-                        <option value="1981">1981</option>
-                        <option value="1980">1980</option>
-                        <option value="1979">1979</option>
-                        <option value="1978">1978</option>
-                        <option value="1977">1977</option>
-                        <option value="1976">1976</option>
-                        <option value="1975">1975</option>
-                        <option value="1974">1974</option>
-                        <option value="1973">1973</option>
-                        <option value="1972">1972</option>
-                        <option value="1971">1971</option>
-                        <option value="1970">1970</option></select>&nbsp;&nbsp;-&nbsp;&nbsp;<select class="hour form-control" style="width: auto;"><option value=""></option>
-                        <option value="0">00</option>
-                        <option value="1">01</option>
-                        <option value="2">02</option>
-                        <option value="3">03</option>
-                        <option value="4">04</option>
-                        <option value="5">05</option>
-                        <option value="6">06</option>
-                        <option value="7">07</option>
-                        <option value="8">08</option>
-                        <option value="9">09</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                        <option value="13">13</option>
-                        <option value="14">14</option>
-                        <option value="15">15</option>
-                        <option value="16">16</option>
-                        <option value="17">17</option>
-                        <option value="18">18</option>
-                        <option value="19">19</option>
-                        <option value="20">20</option>
-                        <option value="21">21</option>
-                        <option value="22">22</option>
-                        <option value="23">23</option></select>&nbsp;:&nbsp;<select class="minute form-control" style="width: auto;"><option value=""></option>
-                        <option value="0">00</option>
-                        <option value="5">05</option>
-                        <option value="10">10</option>
-                        <option value="15">15</option>
-                        <option value="20">20</option>
-                        <option value="25">25</option>
-                        <option value="30">30</option>
-                        <option value="35">35</option>
-                        <option value="40">40</option>
-                        <option value="45">45</option>
-                        <option value="50">50</option>
-                        <option value="55">55</option></select></span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label>Type<span class="text-danger"> *</span></label>
-                      <%= f.text_field :expense_type, required: true , :class => "form-control input-lg " %>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="line line-dashed line-lg pull-in"></div>
-                <div class="form-group">
-                  <div class="col-lg-offset-2 col-lg-10">
-                    <%= f.submit :class=>"btn btn-info btn-md" %>
-                    <%= button_tag "Cancel", :type => 'reset',:class=>"btn btn-md" %>
-                  </div>
-                </div>
-            <% end %>
-
-          </div>
-        </section>
-      </div>
-    </section>
-  </section>
-  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
 </section>
 
 <script>
