--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,11 +8,14 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+*= require main
  *= require amaran/amaran.min
+
  *= require landing
  *= require bootstrap
  *= require font-awesome.min
  *= require font
+ *= require fuelux/fuelux
  *= require app
  *= require select2/select2
  *= require select2/theme
@@ -21,5 +24,6 @@
  *= require sweetalert
  *= require datepicker/datepicker
  *= require style
+
 
  */
