--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -54,9 +54,9 @@
               <!--</div>-->
               <!--</div>-->
               <div class="form-group">
-                <label class="col-lg-2 control-label">Purpose</label>
+                <label class="col-lg-2 control-label">Expense Note</label>
                 <div class="col-lg-10">
-                  <%= f.text_area :purpose, rows: "4",placeholder: "Expense Description", class: "form-control" %>
+                  <%= f.text_area :purpose, rows: "4",placeholder: "Expense Note", class: "form-control" %>
                 </div>
               </div>
 
