--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -1,37 +1,46 @@
 <section class="hbox stretch">
-    <aside class="aside-md bg-white b-r hide" id="subNav">
-      <div class="wrapper b-b header">SALES</div>
-      <ul class="nav">
-        <li class="b-b b-light"><a href="#"><i class="fa fa-chevron-right pull-right m-t-xs text-xs icon-muted"></i>Total Sales</a></li>
-        <li class="b-b b-light"><a href="#"><i class="fa fa-chevron-right pull-right m-t-xs text-xs icon-muted"></i>Today Sales</a></li>
-      </ul>
-    </aside>
-    <aside>
+    <aside class="col-md-8">
       <section class="vbox">
         <header class="header bg-white b-b clearfix">
           <div class="row m-t-sm">
-            <div class="col-sm-8 m-b-xs">
-              <a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default"><i class="fa fa-caret-right text fa-lg"></i><i class="fa fa-caret-left text-active fa-lg"></i></a>
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-default" title="Refresh"><i class="fa fa-refresh"></i></button>
-                <!--<button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>-->
-                <!--<button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>-->
-                <!--<ul class="dropdown-menu">-->
-                  <!--<li><a href="#">Action</a></li>-->
-                  <!--<li><a href="#">Another action</a></li>-->
-                  <!--<li><a href="#">Something else here</a></li>-->
-                  <!--<li class="divider"></li>-->
-                  <!--<li><a href="#">Separated link</a></li>-->
-                <!--</ul>-->
-              </div>
-              <a href="#customItem" data-toggle="modal" data-target="#customItem" class="btn btn-sm btn-info" title="Create New Custom Item"><i class="fa fa-plus pull-left"></i>Custom Item</a>
-              <a href="#customCustomer" data-toggle="modal" data-target="#customCustomer" class="btn btn-sm btn-warning" title="Create New Customer"><i class="fa fa-plus pull-left"></i> Customer</a>
+            <a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default pull-right"><i class="fa fa-caret-left text-active  fa-lg"></i> <i class="fa fa-caret-right text fa-lg"></i></a>
+            <input type="number" id="search_sale_id" value="<%= @sale.id %>" class="hidden"/>
+            <!--<div class="col-sm-12 col-md-12 m-b-xs">-->
+              <!--<a href="#customItem" data-toggle="modal" data-target="#customItem" class="btn btn-sm btn-info" title="Create New Custom Item"><i class="fa fa-plus pull-left"></i>Custom Item</a>-->
+              <!--<a href="#customCustomer" data-toggle="modal" data-target="#customCustomer" class="btn btn-sm btn-warning" title="Create New Customer"><i class="fa fa-plus pull-left"></i> Customer</a>-->
+              <%= form_for :search, url: update_line_item_options_sales_path , format: :js, method: "post", remote: true do |f| %>
+                <%= f.hidden_field :id, :value => @sale.id %>
+                <div class="col-xs-4 col-md-4">
+                    <%= f.collection_select :item_category, current_company.item_categories, :id, :name, {prompt: "Select a category"}, {class: "form-control item_category_search_input"}  %>
+                  </div>
+                  <div class="col-xs-3 col-md-3">
+                    <div class="input-group">
+                      <%= f.text_field :item_name, class: "form-control item_search_input awesomplete", list: 'items-list', placeholder: "Search Items" %>
+                      <span class="input-group-btn">
+                           <%= submit_tag "search", :class => "btn btn-info item_search" %>
+                          </span>
+                    </div>
+                    <datalist id="items-list">
+                      <% @available_items.each do |itm| %>
+                          <%= link_to "link1", "#",{remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window'} %>
+                          <!-- Don't remove the '.|' -->
+                          <option value=""><%= itm.id %>.| <%= itm.name %> | stk amount: <%= itm.stock_amount %></option>
+                      <% end %>
 
+                    </datalist>
+
+
+
+                  </div>
+
+
+              <% end %>
             </div>
-          </div>
+          <!--</div>-->
         </header>
         <section class="scrollable wrapper w-f">
           <!--<section class="panel panel-default">-->
+          <%#= render 'items/partials/item_grid_view' , items: Item.all %>
             <div class="sale_form_details">
               <%= render 'sales/shared/form' %>
             </div>
@@ -40,23 +49,68 @@
         <footer class="footer bg-white b-t">
           <div class="row text-center-xs">
             <!--<div class="col-md-6 hidden-sm">-->
-              <!--<p class="text-muted m-t">Showing 20-30 of 50</p>-->
+            <!--<p class="text-muted m-t">Showing 20-30 of 50</p>-->
             <!--</div>-->
             <!--<div class="col-md-6 col-sm-12 text-right text-center-xs">-->
-              <!--<ul class="pagination pagination-sm m-t-sm m-b-none">-->
-                <!--<li><a href="#"><i class="fa fa-chevron-left"></i></a></li>-->
-                <!--<li class="active"><a href="#">1</a></li>-->
-                <!--<li><a href="#">2</a></li>-->
-                <!--<li><a href="#">3</a></li>-->
-                <!--<li><a href="#">4</a></li>-->
-                <!--<li><a href="#">5</a></li>-->
-                <!--<li><a href="#"><i class="fa fa-chevron-right"></i></a></li>-->
-              <!--</ul>-->
+            <!--<ul class="pagination pagination-sm m-t-sm m-b-none">-->
+            <!--<li><a href="#"><i class="fa fa-chevron-left"></i></a></li>-->
+            <!--<li class="active"><a href="#">1</a></li>-->
+            <!--<li><a href="#">2</a></li>-->
+            <!--<li><a href="#">3</a></li>-->
+            <!--<li><a href="#">4</a></li>-->
+            <!--<li><a href="#">5</a></li>-->
+            <!--<li><a href="#"><i class="fa fa-chevron-right"></i></a></li>-->
+            <!--</ul>-->
             <!--</div>-->
           </div>
         </footer>
       </section>
     </aside>
+  <aside class="col-md-8aside-md bg-white b-r" id="subNav">
+    <section class="vbox">
+      <header class="header bg-white b-b clearfix">
+        <%= link_to raw("<i class='fa fa-trash-o'></i>") , '#',id:'empty-cart' ,class: "btn btn-icon btn-default btn-sm pull-right" %>
+        <button class="btn btn-icon btn-default btn-sm pull-right visible-xs m-r-xs" data-toggle="class:show" data-target="#mail-nav"><i class="fa fa-reorder"></i></button>
+        <!--<p class="h4">Cart (25)</p>-->
+      </header>
+      <!--<header class="header bg-white b-b clearfix">-->
+        <!--<div class="row m-t-sm">-->
+        <!--<p>Cart (25)</p>-->
+        <!--</div>-->
+      <!--</header>-->
+      <section class="scrollable wrapper w-f">
+      <%= form_for(@sale) do |f| %>
+
+    <!--<div class="wrapper b-b header">SALES</div>-->
+            <ul class="nav">
+
+              <%= render :partial => 'template/form_errors', :object => @sale %>
+
+              <!--<h4 class="text-info"><span class="glyphicon glyphicon-tags"></span> Items</h4>-->
+              <!--<hr class="hidden-print" />-->
+              <div class="added_items">
+                <%= render :partial => 'sales/shared/added_items', :locals=>{:f=>f} %>
+              </div>
+
+              <div class="row">
+                <div class="sale_totals col-sm-12 hidden-print">
+                  <%= render :partial => 'sales/shared/sale_totals', :locals=>{:f=>f} %>
+                </div>
+                <!--<div class="sale_payments col-sm-8">-->
+                  <%#render :partial => 'sales/shared/sale_payments', :locals => {:f => f} %>
+                <!--</div>-->
+              </div>
+              <%= f.submit 'Update Sale', :class => "hidden btn btn-info btn-lg sale_submit" %>
+            </ul>
+          </section>
+          <footer class="footer b-t">
+            <%= render :partial => 'sales/shared/sale_payments', :locals => {:f => f} %>
+
+            <!--<button class="btn btn-success btn-sm"><i class="fa fa-plus"></i> New contact</button>-->
+          </footer>
+      <% end %>
+    </section>
+  </aside>
   <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
 </section>
 
