--- a/app/views/sales/shared/_added_items.html.erb
+++ b/app/views/sales/shared/_added_items.html.erb
@@ -1,13 +1,14 @@
  <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-hover">
     <thead>
       <tr>
-        <th>#</th>
-        <th>Item</th>
-        <th>Description</th>
+        <th>Title/Options</th>
+        <!--<th>Item</th>-->
+        <!--<th>Description</th>-->
         <th>Price</th>
-        <th>Quantity</th>
-        <th>Total Price</th>
+        <th>Qty</th>
+        <th>Total</th>
+        <th><th>
       </tr>
     </thead>
 
@@ -16,14 +17,15 @@
         <%= f.fields_for :items do |e| %>
           <% @line_item = @sale.line_items.where( item_id: e.object.id).first %>
           <tr>
-            <td><%= e.text_field :sku, :class => "form-control line_item_sku", :placeholder => "SKU", :readonly => true %></td>
-            <td><%= e.text_field :name, :class => "form-control", :placeholder => "Item", :readonly => true %></td>
-            <td><%= e.text_area :description, :class => "form-control", :placeholder => "Description", :readonly => true %></td>
+            <%= e.text_field :sku, :class => "form-control line_item_sku hidden", :placeholder => "SKU", :readonly => true %>
+            <td><%= e.object.name %></td>
+            <%= e.text_field :name, :class => "form-control hidden", :placeholder => "Item", :readonly => true %>
+            <%= e.text_area :description, :class => "form-control hidden", :placeholder => "Description", :readonly => true %>
             <td>
-              <input type="text" id="line_item_price" class='form-control price_control' value="<%= number_to_currency(@line_item.price, unit: current_company.currency) %>">
+              <input type="text" id="line_item_price" class='form-control price_control' style= 'font-size: 10px;'  value="<%= @line_item.price %>">
             </td>
             <td class="amount">
-              <%= text_field(:line_item, :quantity, :class => 'form-control price_control', :readonly => 'readonly') %>
+              <%= text_field(:line_item, :quantity, :class => 'form-control price_control', :readonly => 'readonly' , style: 'font-size: 10px;') %>
               <div class="adjust hidden-print">
                 <%= link_to url_for(:controller => 'sales', :action => 'add_item', :item_id => e.object.id, :sale_id => @sale.id), :remote => true do %>
                   <span class="glyphicon glyphicon-plus"></span>
@@ -34,7 +36,11 @@
                 <% end %>
               </div>
             </td>
-            <td><input class="form-control" type="text" value="<%= number_to_currency(@line_item.total_price, unit: current_company.currency) %>" placeholder="Total Price" readonly="readonly"></td>
+            <td><%= number_to_currency(@line_item.total_price, unit: current_company.currency) %></td>
+            <td><%= link_to url_for(:controller => 'sales', :action => 'remove_lineitem', :line_item => @line_item, :sale_id => @sale.id), :remote => true do %>
+                  <i class="fa fa-times text-danger text"></i>
+              <% end %></td>
+            <!--<td><input class="form-control" type="text" value="<%#= number_to_currency(@line_item.total_price, unit: current_company.currency) %>" placeholder="Total Price" readonly="readonly"></td>-->
           </tr>
         <% end %>
       <% end %>
