--- a/app/views/sales/shared/_form.html.erb
+++ b/app/views/sales/shared/_form.html.erb
@@ -3,29 +3,29 @@
     <!--<div class="panel-body">-->
       
       <!-- Nav tabs -->
-      <ul class="nav nav-tabs hidden-print">
-        <li class="active"><a href="#sale" data-toggle="tab">Sale</a></li>
-        <li><a href="#customer" data-toggle="tab">Customer</a></li>
-        <li><a href="#comments" data-toggle="tab">Comments</a></li>
-      </ul>
+      <!--<ul class="nav nav-tabs hidden-print">-->
+        <!--<li class="active"><a href="#sale" data-toggle="tab">Sale</a></li>-->
+        <!--<li><a href="#customer" data-toggle="tab">Customer</a></li>-->
+        <!--&lt;!&ndash;<li><a href="#comments" data-toggle="tab">Comments</a></li>&ndash;&gt;-->
+      <!--</ul>-->
 
-      <!-- Tab panes -->
-      <div class="tab-content">
+      <!--&lt;!&ndash; Tab panes &ndash;&gt;-->
+      <!--<div class="tab-content">-->
         <div class="tab-pane active" id="sale">
-          <%= render :partial => 'sales/shared/sale_tab' %>       
+          <%= render :partial => 'sales/shared/sale_tab' %>
         </div>
         
-        <div class="tab-pane" id="customer">
-          <%= render :partial => 'sales/shared/customer_info', :object => @sale %>
+        <!--<div class="tab-pane" id="customer">-->
+          <!--<%#= render :partial => 'sales/shared/customer_info', :object => @sale %>-->
 
-          <div class="added_customer">
-            <%= render :partial => 'sales/shared/added_customer' %>
-          </div>
-        </div>
+          <!--<div class="added_customer">-->
+            <!--<%#= render :partial => 'sales/shared/added_customer' %>-->
+          <!--</div>-->
+        <!--</div>-->
 
-        <div class="tab-pane" id="comments">
-          <%= render :partial => 'sales/shared/comments', :object => @sale %>
-        </div>
+        <!--<div class="tab-pane" id="comments">-->
+          <!--<%#= render :partial => 'sales/shared/comments', :object => @sale %>-->
+        <!--</div>-->
 
         <%= render :partial => 'sales/shared/modals' %>
-      </div>
+      <!--</div>-->
