--- a/app/views/sales/shared/_sale_tab.html.erb
+++ b/app/views/sales/shared/_sale_tab.html.erb
@@ -1,59 +1,19 @@
 <div class="row item_search_wrapper hidden-print">
-  <div class="col-sm-4">
-    <h4 class="text-info"><span class="glyphicon glyphicon-search"></span> Find</h4>
+  <!--<div class="col-sm-4">-->
+    <!--<h4 class="text-info"><span class="glyphicon glyphicon-search"></span> Find</h4>-->
 
-    <hr />
-    <%= form_for :search, url: update_line_item_options_sales_path , format: :js, method: "post", remote: true do |f| %>
-      <div class="form-group">
-        <%= f.text_field :item_name, class: "form-control item_search_input awesomplete", list: 'items-list', placeholder: "Search Items" %>
-        <datalist id="items-list">
+    <!--<hr />-->
 
-          <% @available_items.each do |itm| %>
-            <%= link_to "link1", "#",{remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window'} %>
-            <!-- Don't remove the '.|' -->
-            <option value=""><%= itm.id %>.| <%= itm.name %> | stk amount: <%= itm.stock_amount %></option>
-          <% end %>
-
-        </datalist>
-       
-      </div>
-      <div class="form-group">
-        <%= f.collection_select :item_category, current_company.item_categories, :id, :name, {prompt: "Select a category"}, {class: "form-control item_category_search_input"}  %>
-      </div>
-      <%= f.hidden_field :id, :value => @sale.id %>
-      <%= submit_tag "search", :class => "btn btn-info btn-lg item_search" %>
-    <% end %>
-    <!--<button class="btn" data-toggle="modal" data-target="#customItem">-->
-      <!--Create Custom Item-->
-    <!--</button>-->
-  </div>
-  <div class="col-sm-8">
+    <!--&lt;!&ndash;<button class="btn" data-toggle="modal" data-target="#customItem">&ndash;&gt;-->
+      <!--&lt;!&ndash;Create Custom Item&ndash;&gt;-->
+    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+  <!--</div>-->
+  <div class="col-sm-12">
     <div class="searched_items">
       <%= render :partial => 'sales/shared/searched_items' %>
     </div>
   </div>
 </div>
-
-
-<%= form_for(@sale) do |f| %>
-  <%= render :partial => 'template/form_errors', :object => @sale %>
-
-  <h4 class="text-info"><span class="glyphicon glyphicon-tags"></span> Items</h4>
-  <hr class="hidden-print" />
-  <div class="added_items">
-    <%= render :partial => 'sales/shared/added_items', :locals=>{:f=>f} %>
-  </div>
-
-  <div class="row">
-    <div class="sale_totals col-sm-4 hidden-print">
-      <%= render :partial => 'sales/shared/sale_totals', :locals=>{:f=>f} %>
-    </div>
-    <div class="sale_payments col-sm-8">
-      <%= render :partial => 'sales/shared/sale_payments', :locals => {:f => f} %>
-    </div>  
-  </div>
-  <%= f.submit 'Update Sale', :class => "hidden btn btn-info btn-lg sale_submit" %>
-<% end %>
 
 
 <div class="print_totals visible-print">
